# claw-eval

./: .gitignore  README.md  config_qwen3_32b.yaml  config_vllm.yaml  pyproject.toml  run_claweval.slurm  score_summary.py  setup_env.slurm
src/claw_eval/: cli.py
traces/: score_summary.json
