[project]
name = "claw-eval"
version = "1.0.0"
description = "Agent evaluation framework for benchmarking AI agents in real-world personal assistant scenarios"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
vllm = [
    "vllm==0.20.2",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.5.4",
]
mock = ["fastapi>=0.115", "uvicorn>=0.30", "pypdf", "trafilatura>=1.8", "requests>=2.28"]
web = ["trafilatura>=1.8", "requests>=2.28"]
sandbox = ["docker>=7.0"]
dev = ["pytest>=8.0"]

[project.scripts]
claw-eval = "claw_eval.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
